# donk

./: CMakeLists.txt  LICENSE  readme.md
src/: array.c  array.h  coding.c  coding.h  container.c  container.h  frame.c  frame.h  memory.c  memory.h  stream.c  stream.h  utils.c  utils.h
tests/: array.c  memory.c
